--- a/templates/index.html
+++ b/templates/index.html
@@ -55,13 +55,13 @@
   <ul class="nav justify-content-center"
     style="font-size: 25px; background-color: rgba(255, 255, 255, 0.3); padding: 10px; ">
     <li class="nav-item">
-      <a class="nav-link active" href="index.html">Home</a>
+      <a class="nav-link active" href="index">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="Reco.html">Recommender</a>
+      <a class="nav-link" href="recommend">Recommender</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="hel.html">Health</a>
+      <a class="nav-link" href="hel">Health</a>
     </li>
   </ul>
   <hr>
