--- a/templates/reco.html
+++ b/templates/reco.html
@@ -10,7 +10,7 @@
 
     <style>
         body {
-            background: url('static/top-view-immunity-boosting-food-healthy-lifestyle.jpg') center center fixed;
+            background: url('static/ccc.jpg') center center fixed;
             background-size: cover;
         }
 
@@ -27,17 +27,17 @@
 
 <body>
     <ul class="nav justify-content-center"
-    style="font-size: 25px; background-color: rgba(255, 255, 255, 0.3); padding: 10px; ">
-    <li class="nav-item">
-      <a class="nav-link active" href="index.html">Home</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="Reco.html">Recommender</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="hel.html">Health</a>
-    </li>
-  </ul>
+        style="font-size: 25px; background-color: rgba(255, 255, 255, 0.3); padding: 10px; ">
+        <li class="nav-item">
+            <a class="nav-link active" href="index">Home</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="reco">Recommender</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="hel">Health</a>
+        </li>
+    </ul>
     <div class="container mycont">
         <h1 class="text-center">NutriGuru</h1>
 
@@ -90,21 +90,68 @@
 
                 <div class="col-md-6">
                     <div class="form-group">
-                        <label for="disease">Disease :</label>
-                        <input type="text" class="form-control" id="disease" name="disease">
+                        <label for="activity_level">Activity Level:</label>
+                        <select class="form-control" id="activity_level" name="activity_level">
+                            <option value="sedentary">Sedentary</option>
+                            <option value="lightly active">Lightly Active</option>
+                            <option value="moderately active">Moderately Active</option>
+                            <option value="very active">Very Active</option>
+                            <option value="extra active">Extra Active</option>
+                        </select>
                     </div>
                 </div>
             </div>
+            
+            <div class="form-group">
+                <label for="disease">Disease:</label>
+                <input type="text" class="form-control" id="disease" name="disease">
+            </div>
+
             <div class="form-group">
                 <label for="foodtype">Allergic Food Type:</label>
                 <input type="text" class="form-control" id="foodtype" name="foodtype">
             </div>
 
-            <button type="submit" class="btn btn-danger btn-lrg center "
-                style="width:50%; padding:10px;margin-left:20%; font-weight:bold; position: relative;;">Recommend Diets</button>
+            <button type="submit" class="btn btn-danger btn-block">Recommend Diets</button>
         </form>
     </div>
-
+<br><br>
+<hr>
+<footer style="background-color: rgba(255, 255, 255, 0.9); padding: 20px;">
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <h2>Contact Us</h2><br>
+                <ul style="text-decoration: none; list-style: none;">
+                    <li><a href="#"><i class="fab fa-youtube"></i> Youtube</a></li>
+                    <li><a href="#"><i class="fab fa-instagram"></i> Instagram</a></li>
+                    <li><a href="#"><i class="fab fa-twitter"></i> Twitter</a></li>
+                </ul>
+            </div>
+            <div class="col">
+                <h2>Our address</h2>
+                <address>
+                    Flat no.502, Wing Manali, Shankar Heights Phase 3,
+                    New DP Road, Chinchpada, Ambernath (West)
+                </address>
+                <br>
+                <h3>Experience our app</h3>
+                <br>
+                <img class="desktop-androidDownLink" width="150px"
+                    src="https://constant.myntassets.com/web/assets/img/80cc455a-92d2-4b5c-a038-7da0d92af33f1539674178924-google_play.png">
+                <img class="desktop-iOSDownLink"
+                    src="https://constant.myntassets.com/web/assets/img/bc5e11ad-0250-420a-ac71-115a57ca35d51539674178941-apple_store.png"
+                    width="150px">
+            </div>
+            <div class="col">
+                <h2>Mail us</h2>
+                <p>Email: <a href="mailto:abhaysgupta722@gmail.com">abhaysgupta722@gmail.com</a></p>
+                <p>Contact No: <a href="tel:9324617265">9324617265</a></p>
+            </div>
+        </div>
+    </div>
+    <br><br>
+</footer>
     <!-- Add Bootstrap JS and jQuery -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.7/dist/umd/popper.min.js"></script>
