--- a/templates/reco.html
+++ b/templates/reco.html
@@ -32,7 +32,7 @@
             <a class="nav-link active" href="index">Home</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="reco">Recommender</a>
+            <a class="nav-link" href="recommend">Recommender</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="hel">Health</a>
